MAJ numérotation des cas

--- a/Notes et remarques session mentorat/20191206.md
+++ b/Notes et remarques session mentorat/20191206.md
@@ -18,7 +18,7 @@
     - [x] Modifier commande à traiter
     - [x] Consulter aide-Mémoire
     - [x] Consulter stock ingrédients
-    - [] Mise à jour manuelle du stock
+    - [x] Mise à jour manuelle du stock
         - [x] Ajout dans Diagramme
     - [] Gestion droit utilisateur
 - Equipe Nationale
