--- a/Notes et remarques session mentorat/20191206.md
+++ b/Notes et remarques session mentorat/20191206.md
@@ -4,7 +4,7 @@
 
     - Ajout Package Identification pour éviter le dédoublonnement dans les autres packages
     - Faisons nous une unique fiche pour S'identifier? Qui sera dans tous les packages?
-    - Doit-on faire une fiche pour encaisser le paiment? (Hors système le paiement se fait par chèque ou espèce dans ce cas)
+    - Doit-on faire une fiche pour encaisser le paiment? (Hors système le paiement se fait par chèque ou espèce dans ce cas) => Oui
     - Pour le package Equipe Nationale, "Consulter historique des commandes" se retrouve logiquement dans "Consulter Bilan d'activité Individuel/Global des Restaurants", mise à jour du diagrame
     - Toujours pour le package Equipe Nationale, doit-on rajouter des fonctionnalités liées à la consultation du bilan d'activité? (Exemple, la consultation se fait sur l'activité globale, on a ensuite la possibilité de sélectionner un restaurant pour avoir le bilan individuel)
 
@@ -12,16 +12,14 @@
 - Livreur
     - [x] Consulter commande à livrer
     - [x] Modifier commande à livrer
-    - [] Encaisser paiement? 
 - Pizzéria
     - [x] Consulter commande à traiter
     - [x] Modifier commande à traiter
-    - [x] Consulter aide-Mémoire
     - [x] Consulter stock ingrédients
+    - [x] Consulter aide-Mémoire
     - [x] Mise à jour manuelle du stock
-        - [x] Ajout dans Diagramme
-    - [] Gestion droit utilisateur
+    - [x] Gestion droit utilisateur
 - Equipe Nationale
-    - [] Consulter stock ingrédients
-    - [] Gestion droit utilisateurs
+    - [x] Consulter stock ingrédients
+    - [x] Gestion droit utilisateurs
     - [] Consulter Bilan d'activité Individuel/Global
